tests/TraceProof.lean.expected
tests/TraceProof.lean:14:2: error: tactic 'aesop' failed, made no progress
α : Sort ?u.5
⊢ α
tests/TraceProof.lean:20:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/TraceProof.lean:19:15: error: unsolved goals
⊢ False
[aesop.proof] id ?m.36
